# go-review-tool

./: go-review-tool.cabal  notes.org  run.sh  stack.yaml
src/: Board.hs  Main.hs
