name:                   go-review-tool
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

executable go-review-tool
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -threaded
                        --Werror
                        -Wall
                        -Wcompat
                        -Wnoncanonical-monad-instances
                        -Wnoncanonical-monadfail-instances
                        -fdefer-typed-holes
                        -fno-warn-missing-signatures
                        -fno-warn-partial-type-signatures
  default-extensions:   BangPatterns
                        LambdaCase
                        MultiWayIf
                        NoMonomorphismRestriction
                        OverloadedStrings
                        PartialTypeSignatures
                        PatternGuards
                        ScopedTypeVariables
                        ViewPatterns
  build-depends:        base
                      , gi-gtk
